--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,9 +8,8 @@
 ##### CORE CONFIGURATION #####
 
 # https://wiki.hyprland.org/Configuring/Monitors/
-monitor = , preferred, auto, 1 #Default monitor config
-
-# source = ~/.config/hypr/monitors.conf
+# monitor = , preferred, auto, 1 #Default monitor config
+source = ~/.config/hypr/monitors.conf
 
 ##############################
 
@@ -23,7 +22,7 @@ monitor = , preferred, auto, 1 #Default monitor config
 $mainMod = SUPER
 $terminal = ghostty
 $menu = dms ipc call spotlight toggle
-$browser = vivaldi
+$browser = brave
 $notifications = dms ipc call notifications toggle
 $clipboard = dms ipc call clipboard toggle
 $settings = dms ipc call settings toggle
