--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,8 +8,8 @@
 ##### CORE CONFIGURATION #####
 
 # https://wiki.hyprland.org/Configuring/Monitors/
-# monitor = , preferred, auto, 1 #Default monitor config
-source = ~/.config/hypr/monitors.conf
+# monitor = , preferred, auto, 1 # Default monitor config
+source = ~/.config/hypr/dual_monitors.conf
 
 ##############################
 
