--- a/dotfiles/config/hypr/hyprland.conf
+++ b/dotfiles/config/hypr/hyprland.conf
@@ -9,7 +9,7 @@
 
 # https://wiki.hyprland.org/Configuring/Monitors/
 # monitor = , preferred, auto, 1 # Default monitor config
-source = ~/.config/hypr/dual_monitors.conf
+source = ~/.config/hypr/monitors.conf
 
 ##############################
 
