--- a/config.yaml
+++ b/config.yaml
@@ -68,7 +68,7 @@ profiles:
   dauntless:
     dotfiles:
     - f_dms_default
-    - f_hyprland_dauntless
+    - f_hyprland_default
     - f_hyprland_dauntless_monitors
     - f_btop
     - f_fastfetch
