--- a/dotfiles/config/hypr/hyprland.conf
+++ b/dotfiles/config/hypr/hyprland.conf
@@ -161,6 +161,9 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 # USB Drive handler
 exec-once = udiskie
 
+# Dotdrop Install dotfiles
+exec-once = dotdrop install -f
+
 # source = ~/.config/hypr/exec-once.conf
 
 ##############################
