--- a/dotfiles/config/desktop/gmail.desktop
+++ b/dotfiles/config/desktop/gmail.desktop
@@ -1,9 +1,8 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=Gmail
-Comment=Gmail (Chromium)
-Exec=chromium --app=https://mail.google.com/mail
 Terminal=false
-Categories=Network;
-StartupWMClass=https://mail.google.com/mail
+Exec=chromium --app=https://mail.google.com/mail
+Name=Gmail
+Comment=[WebApp} Gmail WebApp
+Categories=Network
