--- a/dotfiles/config/desktop/teams.desktop
+++ b/dotfiles/config/desktop/teams.desktop
@@ -1,9 +1,8 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=MS Teams
-Comment=Microsoft Teams (Chromium)
-Exec=chromium --app=https://teams.microsoft.com
 Terminal=false
-Categories=Network;
-StartupWMClass=https://teams.microsoft.com
+Name=Microsoft Teams
+Comment=[WebApp] Microsoft Teams
+Exec=chromium --app=https://teams.microsoft.com
+Categories=Network
