--- a/dotfiles/config/hypr/hyprland.conf
+++ b/dotfiles/config/hypr/hyprland.conf
@@ -1,41 +1,36 @@
-# This is nsweeting2's default Hyprland config file.
-# Refer to the wiki for more information.
-# https://wiki.hyprland.org/Configuring/Configuring-Hyprland/
-# https://wiki.hyprland.org/Configuring/Keywords/
+##### This is nsweeting2's Hyprland config file.
+##### Formatted to match the logic flow of HyprSettings
+##### Refer to the wiki for more information.
+##### https://wiki.hyprland.org/Configuring/Configuring-Hyprland/
 
-# link more files like this:
-# source = ~/.config/hypr/myColors.confg
-##### CORE CONFIGURATION #####
+##### GENERAL #####
 
-# https://wiki.hyprland.org/Configuring/Monitors/
-# monitor = , preferred, auto, 1 # Default monitor config
-source = ~/.config/hypr/monitors.conf
+# Monitors??
+# Dual monitors horizontal 1:1
+monitor = DP-1, highres, 0x0, 1
+monitor = DP-2, highres, 1920x0, 1
 
-##############################
+# Single external/laptop monitor
+# monitor = , highres, 0x0, 1
 
-# https://wiki.hyprland.org/Configuring/Binds/
-# https://wiki.hypr.land/Configuring/Variables/#variable-types
-# https://wiki.hypr.land/Configuring/Dispatchers/#list-of-dispatchers
+# Dwindle
+dwindle {
+    pseudotile = true
+    preserve_split = true
+}
 
-#####      Keywords      #####
+# Misc
+misc { 
+    force_default_wallpaper = 0
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
+    mouse_move_enables_dpms = true
+    key_press_enables_dpms = true
+    vrr = 1
+}
 
-$mainMod = SUPER
-$terminal = ghostty
-$menu = dms ipc call spotlight toggle
-$browser = brave
-$notifications = dms ipc call notifications toggle
-$clipboard = dms ipc call clipboard toggle
-$settings = dms ipc call settings toggle
-$overview = dms ipc call hypr toggleOverview
-$keybinds = dms ipc call keybinds toggle hyprland
-$lock = dms ipc call lock lock
-$sysmon = dms ipc call processlist toggle
+##### KEYBINDS #####
 
-##############################
-
-#####       Binds        #####
-
-# Syntax: bind = MODS, key, dispatcher, params
 # Binds cheat sheet
 bind = $mainMod SHIFT, Slash, exec, $keybinds
 
@@ -122,81 +117,34 @@ bind = , XF86AudioPause, exec, playerctl play-pause
 bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
 
-# source = ~/.config/hypr/binds.conf
+##### LOOK & FEEL #####
 
-##############################
-
-# https://wiki.hyprland.org/Configuring/Environment-variables/
-
-# GTK Stuff
-env = GTK_THEME,Adwaita
-env = XCURSOR_THEME,Adwaita
-env = XCURSOR_SIZE,24
-
-# source = ~/.config/hypr/gtk.conf
-
-# XDG Specifications
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
-
-# source = ~/.config/hypr/env.conf
-
-##############################
-
-# https://wiki.hyprland.org/?
-
-# Start up Cliphist Clipboard Utility
-exec-once = bash -c "wl-paste --watch cliphist store &"
-
-# Start up Dank Material Shell
-exec-once = dms run
-
-# Start up Polkit Agent
-exec-once = /usr/lib/mate-polkit/polkit-mate-authentication-agent-1
-
-# Update wayland env variables for systemd services
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
-# USB Drive handler
-exec-once = udiskie
-
-# Dotdrop Install dotfiles
-exec-once = dotdrop install -f
-
-# source = ~/.config/hypr/exec-once.conf
-
-##############################
-
-# https://wiki.hyprland.org/Configuring/Variables/#general
-general { 
-    gaps_in = 5
-    gaps_out = 5
-
-    border_size = 2
-
+# General
+general {
+    border_size = 0
+    gaps_in = 10
+    gaps_out = 10
     resize_on_border = true 
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
-
     layout = dwindle
 }
 
-# source = ~/.config/hypr/general.conf
-
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
+# Decoration
 decoration {
-    rounding = 5
+    rounding = 3
+    shadow {
+        enabled = true
+        range = 30
+        render_power = 5
+        offset = 0 5
+        color = rgba(00000070)
+    }
 }
 
-# source = ~/.config/hypr/decoration.conf
+##### ANIMATIONS #####
 
-# https://wiki.hyprland.org/Configuring/Animations/
-# https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = true
-
     bezier = wind, 0.05, 0.9, 0.1, 1.05
     bezier = winIn, 0.1, 1.1, 0.1, 1.1
     bezier = winOut, 0.3, -0.3, 0, 1
@@ -209,41 +157,85 @@ animations {
     animation = workspaces, 1, 5, wind
 }
 
-# source = ~/.config/hypr/animations.conf
+##### WORKSPACES #####
 
-# https://wiki.hyprland.org/Configuring/Dwindle-Layout/
-dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
-}
+# Split workspaces for Dual monitors 1-5:6-0
+# Workspace 1-5 on display 1
+workspace=1,monitor:DP-1
+workspace=2,monitor:DP-1
+workspace=3,monitor:DP-1
+workspace=4,monitor:DP-1
+workspace=5,monitor:DP-1
+# Workspace 6-0 on display 2
+workspace=6,monitor:DP-2
+workspace=7,monitor:DP-2
+workspace=8,monitor:DP-2
+workspace=9,monitor:DP-2
+workspace=10,monitor:DP-2
 
-# source = ~/.config/hypr/dwindle.conf
+##### WINDOW RULES #####
 
-# https://wiki.hyprland.org/Configuring/Variables/#misc
-misc { 
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
-    disable_splash_rendering = true
-    vrr = 1
-}
 
-# source = ~/.config/hypr/misc.conf
+##### LAYER RULES #####
 
-# https://wiki.hyprland.org/Configuring/Variables/#input
+
+##### MONITOR #####
+
+
+##### INPUT #####
 input {
     kb_layout = us
     numlock_by_default = true
-
-    # follow_mouse = 1
-    # force_no_accel = 1
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
+    follow_mouse = 0
+    sensitivity = 0
     touchpad {
         natural_scroll = true
     }
 }
 
-# source = ~/.config/hypr/input.conf
+##### ENVIROMENT VARIABLES #####
 
-##############################
+# GTK Stuff
+env = GTK_THEME,Adwaita
+env = XCURSOR_THEME,Adwaita
+env = XCURSOR_SIZE,24
+
+# XDG Specifications
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
+
+##### GLOBALS #####
+
+$mainMod = SUPER
+$terminal = ghostty
+$menu = dms ipc call spotlight toggle
+$browser = brave
+$notifications = dms ipc call notifications toggle
+$clipboard = dms ipc call clipboard toggle
+$settings = dms ipc call settings toggle
+$overview = dms ipc call hypr toggleOverview
+$keybinds = dms ipc call keybinds toggle hyprland
+$lock = dms ipc call lock lock
+$sysmon = dms ipc call processlist toggle
+
+#### PERMISSIONS #####
+
+##### AUTOSTART #####
+
+# Cliphist Clipboard Utility
+exec-once = bash -c "wl-paste --watch cliphist store &"
+
+# Dank Material Shell
+exec-once = dms run
+
+# Polkit Agent
+exec-once = /usr/lib/mate-polkit/polkit-mate-authentication-agent-1
+
+# Update wayland env variables for systemd services
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
+# Dotdrop Install dotfiles
+exec-once = dotdrop install -f
+
+##### MISCELLANEOUS #####
