--- a/dotfiles/config/hypr/hyprland.conf
+++ b/dotfiles/config/hypr/hyprland.conf
@@ -13,6 +13,21 @@ monitor = DP-2, highres, 1920x0, 1
 # Single external/laptop monitor
 # monitor = , highres, 0x0, 1
 
+##### GLOBALS #####
+# We get Syntax errors if this is any lower.
+
+$mainMod = SUPER
+$terminal = ghostty
+$menu = dms ipc call spotlight toggle
+$browser = brave
+$notifications = dms ipc call notifications toggle
+$clipboard = dms ipc call clipboard toggle
+$settings = dms ipc call settings toggle
+$overview = dms ipc call hypr toggleOverview
+$keybinds = dms ipc call keybinds toggle hyprland
+$lock = dms ipc call lock lock
+$sysmon = dms ipc call processlist toggle
+
 # Dwindle
 dwindle {
     pseudotile = true
@@ -204,20 +219,6 @@ env = XCURSOR_SIZE,24
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
-
-##### GLOBALS #####
-
-$mainMod = SUPER
-$terminal = ghostty
-$menu = dms ipc call spotlight toggle
-$browser = brave
-$notifications = dms ipc call notifications toggle
-$clipboard = dms ipc call clipboard toggle
-$settings = dms ipc call settings toggle
-$overview = dms ipc call hypr toggleOverview
-$keybinds = dms ipc call keybinds toggle hyprland
-$lock = dms ipc call lock lock
-$sysmon = dms ipc call processlist toggle
 
 #### PERMISSIONS #####
 
